Added suggested changes by IDE

--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--this is a comment-->
-<html>
+<html lang="">
     <head>
         <link rel ="stylesheet" href="styles.css" />
         <title>Testing web dev</title>
@@ -19,7 +19,7 @@
                 <h1>Test website header&lt;&Tab;&gt;</h1>
                 
                 <p><strong>ipsum</strong>  dolor sit amet consectetur adipisicing elit. Unde praesentium temporibus ipsam aut nostrum nam, facilis assumenda esse molestias at, commodi, quos harum quam. Delectus eveniet officiis distinctio tempore ducimus?</p>
-                <img src ="images/KHFM.png">
+                <img src ="images/KHFM.png" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur <strong>adipisicing elit</strong>. Unde praesentium temporibus ipsam aut nostrum nam, facilis assumenda esse molestias at, commodi, quos harum quam. Delectus eveniet officiis distinctio tempore ducimus?</p>
             </div>
         <div>
@@ -45,9 +45,9 @@
         <footer>
             <h3>Test website footer</h3>
             <ul>
-                <li><a href="page.html"><button><img src = "images/KHFM.png" width="100" height="80"></button></a></li> <!--creating an image that is a link to another page-->
-                <li><a href="page.html"><button><img src = "images/KHFM.png" width="100" height="80"></button></a></li>
-                <li><a href="page.html"><button><img src = "images/KHFM.png" width="100" height="80"></button></a></li>
+                <li><a href="page.html"><button><img src = "images/KHFM.png" width="100" height="80" alt=""></button></a></li> <!--creating an image that is a link to another page-->
+                <li><a href="page.html"><button><img src = "images/KHFM.png" width="100" height="80" alt=""></button></a></li>
+                <li><a href="page.html"><button><img src = "images/KHFM.png" width="100" height="80" alt=""></button></a></li>
             </ul>
         </footer>
-    </head>
+    </html>
