--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
         <body>
             <header>
             <ul>
-                <li><a href="main.html"target = "_blank"><button>home</button></a></li> <!--creating a button linking to another page-->
+                <li><a href="main.html"><button>home</button></a></li> <!--creating a button linking to another page-->
                 <br>
                 <li><a href="login.html"><button>login</button></a></li>
                 <br>
