connected stylesheet to other *.html files, and made each header button a headerButton class type

--- a/main.html
+++ b/main.html
@@ -8,11 +8,12 @@
         <body>
             <header>
             <ul>
-                <li><a href="main.html"><button>home</button></a></li> <!--creating a button linking to another page-->
+
+                <li><a href="main.html"><button class ="headerButton">home</button></a></li> <!--creating a button linking to another page-->
                 <br>
-                <li><a href="login.html"><button>login</button></a></li>
+                <li><a href="login.html"><button class ="headerButton">login</button></a></li>
                 <br>
-                <li><a href="store.html"><button>store</button></a></li>
+                <li><a href="store.html"><button class ="headerButton">store</button></a></li>
             </ul>
             <hr>
             <div>
