--- a/store.html
+++ b/store.html
@@ -2,16 +2,17 @@
 <!--this is a comment-->
 <html>
     <head>
+        <link rel ="stylesheet" href="styles.css" />
         <title>Testing web dev</title>
         <meta name=" description" content="This is the description">
         <body>
             <header>
             <ul>
-                <li><a href="main.html" ><button>home</button></a></li> <!--creating a button linking to another page--> <!--adding target="_blank" will open a new tab-->
+                <li><a href="main.html"><button class="headerButton">home</button></a></li> <!--creating a button linking to another page--> <!--adding target="_blank" will open a new tab-->
                 <br>
-                <li><a href="login.html"><button>login</button></a></li>
+                <li><a href="login.html"><button class="headerButton">login</button></a></li>
                 <br>
-                <li><a href="store.html"><button>store</button></a></li>
+                <li><a href="store.html"><button class="headerButton">store</button></a></li>
             </ul>
             <hr>
             <h1>This is the store page!</h1>
