--- a/login.html
+++ b/login.html
@@ -27,6 +27,7 @@
                 <span>Password:</span>
                 <input type="password">
             </div>
+            </header>
         </body>
     </head>
 </html>
