--- a/store.html
+++ b/store.html
@@ -16,6 +16,7 @@
             </ul>
             <hr>
             <h1>This is the store page!</h1>
+            </header>
         </body>
     </head>
 </html>
